# AOC2019

./: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
app/: Main.hs
rust/: Cargo.toml
rust/src/: day1.rs  day10.rs  day3.rs  day4.rs  day6.rs  main.rs
src/: Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Pipes1.hs  day1.hs
